// Fixed an issue where the navigation bar covers the viewport.

--- a/rock-paper-scissors/style.css
+++ b/rock-paper-scissors/style.css
@@ -1,3 +1,7 @@
+html {
+    height: 100%;
+}
+
 body {
     font-family: "Roboto", sans-serif;
     background-color: #3266CC;
